--- a/src/com/khoirularifin/quiz2/PenjualanFrame.form
+++ b/src/com/khoirularifin/quiz2/PenjualanFrame.form
@@ -141,6 +141,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Remove"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="removeButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jumlahText">
     </Component>
